# QMem

./: .gitignore  DEVELOP.md  DEVELOPMENT_LOG.md  PROJECT_KNOWLEDGE_BASE.md  README.md  README.zh.md  README_en.md  README_zh.md  REFACTOR_PLAN.md  config.js  manifest.json
llm_memory_transferor/: README.md  pyproject.toml
llm_memory_transferor/eval/longmemeval/: README.md  adapter.py  chroma_retrieval_runner.py  generation_runner.py  retrieval_runner.py  run.py  sample_episodic_cases.py
llm_memory_transferor/src/llm_memory_transferor/: __init__.py  cli.py
llm_memory_transferor/src/llm_memory_transferor/exporters/: __init__.py  bootstrap_generator.py  package_exporter.py
llm_memory_transferor/src/llm_memory_transferor/layers/: __init__.py  l0_raw.py  l1_signals.py  l2_wiki.py  l3_schema.py
llm_memory_transferor/src/llm_memory_transferor/models/: __init__.py  base.py  episode.py  platform_mapping.py  preference.py
llm_memory_transferor/src/llm_memory_transferor/processors/: __init__.py  memory_builder.py  memory_updater.py  prompts.py
llm_memory_transferor/src/llm_memory_transferor/retrieval/: __init__.py  chroma_index.py  chunking.py
llm_memory_transferor/src/llm_memory_transferor/utils/: __init__.py  llm_client.py  storage.py
llm_memory_transferor/tests/: test_exporters.py  test_l0_raw.py  test_l1_signals.py  test_l2_wiki.py  test_l3_schema.py  test_longmemeval_adapter.py  test_models.py
memory_transferor/: README.md  pyproject.toml
memory_transferor/scripts/: run_memory_sample_case.py
memory_transferor/src/memory_transferor/: __init__.py
(+305 files in other folders)
