[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-transferor"
version = "0.1.0"
description = "Canonical personal memory transfer and storage pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

